--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Manbu-Blog",
+  "name": "manbu-blog-client",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -9,8 +9,12 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/style-resources": "^1.2.1",
     "ant-design-vue": "^1.7.8",
     "core-js": "^3.19.3",
+    "less": "^4.1.1",
+    "less-loader": "^7.3.0",
+    "nprogress": "^0.2.0",
     "nuxt": "^2.15.8",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
