--- a/client/package.json
+++ b/client/package.json
@@ -9,11 +9,15 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/style-resources": "^1.2.1",
     "ant-design-vue": "^1.7.8",
     "core-js": "^3.19.3",
+    "element-ui": "^2.15.8",
+    "js-md5": "^0.7.3",
     "less": "^4.1.1",
     "less-loader": "^7.3.0",
+    "mavon-editor": "^2.10.4",
     "nprogress": "^0.2.0",
     "nuxt": "^2.15.8",
     "vue": "^2.6.14",
@@ -21,5 +25,7 @@
     "vue-template-compiler": "^2.6.14",
     "webpack": "^4.46.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "cookie-universal-nuxt": "^2.1.5"
+  }
 }
