--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,12 @@
     "start": "nuxt start",
     "generate": "nuxt generate"
   },
+  "config": {
+    "nuxt": {
+      "host": "127.0.0.1",
+      "port": "50023"
+    }
+  },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/style-resources": "^1.2.1",
