--- a/client/package.json
+++ b/client/package.json
@@ -35,8 +35,10 @@
     "nprogress": "^0.2.0",
     "nuxt": "^2.15.8",
     "vue": "^2.6.14",
+    "vue-infinite-scroll": "^2.0.2",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
+    "vue-virtual-scroller": "^1.0.10",
     "webpack": "^4.46.0"
   },
   "devDependencies": {
